vulkan/functions.lisp


(cffi:defcfun ("vkGetDeviceAccelerationStructureCompatibilityKHR"
               vkgetdeviceaccelerationstructurecompatibilitykhr)
    :void
  (device vkdevice)
  (pversioninfo (:pointer (:struct vkaccelerationstructureversioninfokhr)))
  (pcompatibility (:pointer vkaccelerationstructurecompatibilitykhr)))

(cffi:defcfun ("vkGetAccelerationStructureBuildSizesKHR"
               vkgetaccelerationstructurebuildsizeskhr)
    :void
  (device vkdevice)
  (buildtype vkaccelerationstructurebuildtypekhr)
  (pbuildinfo (:pointer (:struct vkaccelerationstructurebuildgeometryinfokhr)))
  (pmaxprimitivecounts (:pointer :uint32))
  (psizeinfo (:pointer (:struct vkaccelerationstructurebuildsizesinfokhr))))

(cffi:defcfun ("vkCmdTraceRaysKHR" vkcmdtracerayskhr)
    :void
  (commandbuffer vkcommandbuffer)
  (praygenshaderbindingtable
   (:pointer (:struct vkstrideddeviceaddressregionkhr)))
  (pmissshaderbindingtable (:pointer (:struct vkstrideddeviceaddressregionkhr)))
  (phitshaderbindingtable (:pointer (:struct vkstrideddeviceaddressregionkhr)))
  (pcallableshaderbindingtable
   (:pointer (:struct vkstrideddeviceaddressregionkhr)))
  (width :uint32)
  (height :uint32)
  (depth :uint32))

(cffi:defcfun ("vkCreateRayTracingPipelinesKHR" vkcreateraytracingpipelineskhr)
    vkresult
  (device vkdevice)
  (deferredoperation vkdeferredoperationkhr)
  (pipelinecache vkpipelinecache)
  (createinfocount :uint32)
  (pcreateinfos (:pointer (:struct vkraytracingpipelinecreateinfokhr)))
  (pallocator (:pointer (:struct vkallocationcallbacks)))
  (ppipelines (:pointer vkpipeline)))

(cffi:defcfun ("vkGetRayTracingCaptureReplayShaderGroupHandlesKHR"
               vkgetraytracingcapturereplayshadergrouphandleskhr)
    vkresult
  (device vkdevice)
  (pipeline vkpipeline)
  (firstgroup :uint32)
  (groupcount :uint32)
  (datasize :size)
  (pdata (:pointer :void)))

(cffi:defcfun ("vkCmdTraceRaysIndirectKHR" vkcmdtraceraysindirectkhr)
    :void
  (commandbuffer vkcommandbuffer)
  (praygenshaderbindingtable
   (:pointer (:struct vkstrideddeviceaddressregionkhr)))
  (pmissshaderbindingtable (:pointer (:struct vkstrideddeviceaddressregionkhr)))
  (phitshaderbindingtable (:pointer (:struct vkstrideddeviceaddressregionkhr)))
  (pcallableshaderbindingtable
   (:pointer (:struct vkstrideddeviceaddressregionkhr)))
  (indirectdeviceaddress vkdeviceaddress))

(cffi:defcfun ("vkGetRayTracingShaderGroupStackSizeKHR"
               vkgetraytracingshadergroupstacksizekhr)
    vkdevicesize
  (device vkdevice)
  (pipeline vkpipeline)
  (group :uint32)
  (groupshader vkshadergroupshaderkhr))

(cffi:defcfun ("vkCmdSetRayTracingPipelineStackSizeKHR"
               vkcmdsetraytracingpipelinestacksizekhr)
    :void
  (commandbuffer vkcommandbuffer)
  (pipelinestacksize :uint32))
